# pytest-fast-discovery

./: .gitignore  Cargo.toml  pyproject.toml
python/pytest_fast_discovery/: __init__.py  plugin.py
src/: lib.rs
tests/: test_discovery.py
